<resources>
    <!--    login facebook-->
    <string name="facebook_app_id" translatable="false">2739732686266234</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2739732686266234</string>

    <!--    font-->
    <string name="font_Roboto_Bold" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="font_Roboto_Italic" translatable="false">fonts/Roboto-Italic.ttf</string>
    <string name="font_Roboto_Medium" translatable="false">fonts/Roboto-Medium.ttf</string>
    <string name="font_Roboto_Thin" translatable="false">fonts/Roboto-Thin.ttf</string>

    <!--    string text-->
    <string name="app_name" translatable="false">MyTravel</string>
    <string name="text_title_home">Home</string>
    <string name="text_title_favorite">Favorites</string>
    <string name="text_title_profiles">Profile</string>
    <string name="text_title_setting">Setting</string>
    <string name="text_new_travel">New Traveler ?</string>
    <string name="text_login">Login</string>
    <string name="text_register">Sign Up</string>
    <string name="text_name">Name</string>
    <string name="text_password">Password</string>
    <string name="text_re_password">Repeat Password</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_promise">I accept the Tems of Service</string>
    <string name="text_keep_me_logged_in">Keep me logged in ?</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="text_login_social">Login with social networks</string>
    <string name="text_question_account">Do not have an account ?</string>
    <string name="text_notification">Notification</string>
    <string name="text_visa_travel_support" translatable="false">Visa travel support</string>
    <string name="text_privacy">Privacy</string>
    <string name="text_help">Help</string>
    <string name="text_update_password">Change Password</string>
    <string name="text_log_out">Logout</string>
    <string name="text_language">Language</string>
    <string name="text_places">Places</string>
    <string name="text_videos">Videos</string>
    <string name="text_photos">Photos</string>
    <string name="text_tours">Tours</string>
    <string name="msg_error_enter_name">Please enter your name !</string>
    <string name="msg_error_enter_password">Please enter your password !</string>
    <string name="msg_error_enter_re_password">Please enter repeat your password !</string>
    <string name="msg_error_enter_email">Please enter your email !</string>
    <string name="msg_error_pass_not_match_re_pass">Can\'t confirm your password ! Please enter repeat your password !</string>
    <string name="msg_error_email">Email Fail !</string>
    <string name="msg_error_sign_up">Registration failed, please try again !</string>
    <string name="msg_success_sign_up">Register Success !</string>
    <string name="msg_error_login">Please check your email or password !</string>
    <string name="msg_success_login">Login Success !</string>
    <string name="msg_error_sign_in_google">Google sign in failed ! Please try again !</string>
    <string name="msg_error_authentication">Authentication Failed.</string>
    <string name="msg_success_log_out">Logout Success !</string>
    <string name="msg_cancel_facebook">Account Facebook Canceled !</string>
    <string name="msg_error_login_facebook">Login with Facebook Error ! Please try again !</string>
    <string name="text_user_name_default">Employer</string>
    <string name="text_credit">0 credit</string>
    <string name="text_rating">Rating</string>
    <string name="text_rating_detail">My travel 5 star</string>
    <string name="text_support">Support 24/7</string>
    <string name="text_support_detail" translatable="false">0344366899</string>
    <string name="text_history">History</string>
    <string name="text_history_detail">Tour booked</string>
    <string name="text_money_word">Money Word</string>
    <string name="text_money_word_detail" translatable="false">Dollar</string>
    <string name="text_pay">Payment</string>
    <string name="text_pay_detail">0 card</string>
    <string name="msg_error_network">Please check your network !</string>
    <string name="text_content_logout">Do you want log out My Travel ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_title_rating">Do you love My Travel ?</string>
    <string name="text_content_rating">Rating for me !</string>
    <string name="text_done">Done</string>
    <string name="text_enter_code">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="text_information">Information</string>
    <string name="text_version_app">Version 1.0.0</string>
    <string name="text_my_name">Developer Android: N.K.T</string>
    <string name="text_my_name_academy"><![CDATA["Posts & Telecommunications Institute of Technology "]]></string>
    <string name="text_email_default" translatable="false">mytravel@gmail.com</string>
    <string name="text_show_detail_account"><u>Detail My Account</u></string>
    <string name="text_change_password">Change Password</string>
    <string name="text_new_password">New Password</string>
    <string name="msg_error_enter_new_password">Please enter new password !</string>
    <string name="msg_error_confirm_password">Your password error ! Please Enter again !</string>
    <string name="msg_error_pass_not_new">The new password must be different from the old password !</string>
    <string name="msg_success_change_pass">Change password Success !</string>
    <string name="msg_error_length_password">Password must be longer than 6 characters !</string>
    <string name="text_title_support">Do you need advice?</string>
    <string name="text_content_support">Call the phone number</string>
    <string name="text_call">Call</string>
    <string name="text_title_information_profile">Information Account</string>
    <string name="text_phone">Phone</string>
    <string name="text_gender">Gender</string>
    <string name="text_obligatory">* is a required attribute</string>
    <string name="text_update">Update</string>
    <string name="msg_success_update_profile">Update Profile Success !</string>
    <string name="msg_error_update_profile">Update Profile Fail !</string>
    <string name="text_female">FeMale</string>
    <string name="text_male">Male</string>
    <string name="text_address">Address</string>
    <string name="text_birth">Birth of Day</string>
    <string name="msg_get_all_list_city_empty">List City Empty !</string>
    <string name="text_title_introduction">Introduction</string>
    <string name="text_title_explore">Explore</string>
    <string name="text_tour" translatable="false">TOUR</string>
    <string name="msg_error_unknown">Error Unknown ! Please try again !</string>
    <string name="msg_get_all_list_explore_empty">List Explore Empty !</string>
    <string name="text_title_tour_popular">Tour Popular</string>
    <string name="text_form">from</string>
    <string name="msg_get_all_list_tour_popular_empty">List Tour Popular Empty !</string>
    <string name="text_title_schedule">Schedule</string>
    <string name="text_title_traffic">Traffic</string>
    <string name="text_rate_tour">Rate Tour</string>
    <string name="text_book_tour">Book Tour</string>
    <string name="text_title_detail_tour">Detail Tour</string>
    <string name="text_map">Map</string>
    <string name="text_rate_place">Rate Place</string>
    <string name="text_place">Places</string>
    <string name="text_hot_destinations">Hot Destinations</string>
    <string name="text_more_Destinations">More Destinations</string>
    <string name="text_more">More+</string>
    <string name="text_title_rating_explore">Rate your explore</string>
    <string name="text_content_rating_explore">Help your caterer improve their service by rating them</string>
    <string name="text_hot_photos">Hot Photos</string>
    <string name="text_new">New</string>
    <string name="text_good_price">Good Prices</string>
    <string name="text_high_price">High Prices</string>
    <string name="text_low_price">Low Prices</string>
    <string name="text_title_welcome">Welcome</string>
    <string name="text_event_activities"><![CDATA[Event & Activities]]></string>
    <string name="text_hotel">Hotel</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_cuisines">Cuisines</string>
    <string name="text_title_select_date">Select a date</string>
    <string name="text_check_in">Check in</string>
    <string name="text_check_out">Check out</string>
    <string name="text_title_guests">Guests</string>
    <string name="text_adults">Adults</string>
    <string name="text_children">Children</string>
    <string name="text_title_information">Informations</string>
    <string name="text_request_book_tour">Request Book Tour</string>
    <string name="text_open">Open</string>
    <string name="msg_error_open_map">Unable to determine location !</string>
    <string name="text_place_hot">Place Hot</string>
    <string name="msg_get_all_list_hot_marker_empty">List Hot Marker Empty !</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_choose_from_gallery">Choose from Gallery</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_choose_your_profile_picture">Choose your profile picture</string>
    <string name="msg_error_choose_image_gallery">You haven\'t picked Image</string>
    <string name="msg_error_catch_choose_image">Something went wrong</string>
    <string name="text_title_explores">Explores</string>
    <string name="text_title_rating_tour">Rate your tour</string>
    <string name="text_image_hot">Hot Photos</string>
    <string name="msg_get_all_list_explore_favorite_empty">List Favorites Place Empty !</string>
    <string name="msg_get_all_list_tour_favorite_empty">List Favorites Tour Empty !</string>
    <string name="msg_error_choose_date_check_in">Please Choose Date Check In</string>
    <string name="msg_error_choose_date_check_out">Please Choose Date Check Out</string>
    <string name="msg_error_choose_number_adults">Please Choose Number Adults</string>
    <string name="msg_error_choose_number_children">"Please Choose Number Children "</string>
    <string name="text_title_payment">Payment</string>
    <string name="text_title_customer">Customer</string>
    <string name="text_title_pay">Pay</string>
    <string name="text_title_name_tour">Name Tour</string>
    <string name="text_title_check_in_check_out">Time Tour</string>
    <string name="text_title_number_adults">Adults Number</string>
    <string name="text_title_total_price">You need to pay</string>
    <string name="text_payed">You have already paid</string>
    <string name="text_title_history">History</string>
    <string name="text_book_toured">Booked</string>
    <string name="text_content_remove_history">Do you want remove this history ?</string>
    <string name="text_title_detail_history">Detail History</string>
    <string name="default_notification_channel_id" translatable="false">FOU:CHANNEL</string>
    <string name="text_search">Search</string>
    <string name="text_title_number_children">Children Number</string>
</resources>