<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_5dp"
        android:background="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:drawableStart="@drawable/ic_notification"
        android:drawablePadding="@dimen/size_14dp"
        android:text="@string/text_notification"
        android:textColor="@color/colorText"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewActionBar" />

    <Switch
        android:id="@+id/switchNoti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_32dp"
        android:thumb="@drawable/custom_switch_selector"
        android:track="@drawable/custom_switch_track"
        app:layout_constraintBottom_toBottomOf="@+id/tvNotification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNotification" />


    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:drawableStart="@drawable/ic_languages"
        android:drawablePadding="@dimen/size_14dp"
        android:text="@string/text_language"
        android:textColor="@color/colorText"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotification" />

    <Switch
        android:id="@+id/switchLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_32dp"
        android:checked="false"
        android:thumb="@drawable/custom_switch_vietnam"
        android:track="@drawable/custom_switch_track"
        app:layout_constraintBottom_toBottomOf="@+id/tvLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLanguage" />

    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:drawableStart="@drawable/ic_padlock"
        android:drawablePadding="@dimen/size_14dp"
        android:text="@string/text_privacy"
        android:textColor="@color/colorText"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

    <Switch
        android:id="@+id/switchPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_32dp"
        android:thumb="@drawable/custom_switch_selector"
        android:track="@drawable/custom_switch_track"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrivacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPrivacy" />

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:drawableStart="@drawable/ic_information"
        android:drawablePadding="@dimen/size_14dp"
        android:text="@string/text_information"
        android:textColor="@color/colorText"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/switchNoti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="@dimen/size_14dp"
        android:text="@string/text_update_password"
        android:textColor="@color/colorText"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/switchNoti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivacy" />

    <TextView
        android:id="@+id/tvLogOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="@dimen/size_14dp"
        android:text="@string/text_log_out"
        android:textColor="@color/colorText"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/switchNoti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInformation" />

</androidx.constraintlayout.widget.ConstraintLayout>