<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_5dp"
        android:background="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfile"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:elevation="@dimen/size_2dp"
        app:cardCornerRadius="@dimen/size_15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/size_50dp"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_marginBottom="@dimen/size_16dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNameUser"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_16dp"
                android:text="@string/text_user_name_default"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivAvatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEmailUser"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4dp"
                android:text="@string/text_email_default"
                android:textSize="@dimen/size_12sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvNameUser"
                app:layout_constraintTop_toBottomOf="@+id/tvNameUser" />

            <TextView
                android:id="@+id/tvShowDetailUser"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_6dp"
                android:layout_marginBottom="@dimen/size_16dp"
                android:text="@string/text_show_detail_account"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvEmailUser"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailUser" />

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="@dimen/size_1dp"
                android:layout_marginStart="@dimen/size_2dp"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_marginEnd="@dimen/size_2dp"
                android:background="@color/colorMain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

            <ImageView
                android:id="@+id/ivMoney"
                android:layout_width="@dimen/size_20dp"
                android:layout_height="@dimen/size_20dp"
                android:layout_marginTop="@dimen/size_16dp"
                app:layout_constraintEnd_toEndOf="@+id/ivAvatar"
                android:layout_marginBottom="@dimen/size_16dp"
                android:src="@drawable/ic_credit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ivAvatar"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/tvMoney"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:padding="@dimen/size_2dp"
                android:text="@string/text_credit"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_12sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/ivMoney"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivMoney"
                app:layout_constraintTop_toTopOf="@+id/ivMoney" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <GridLayout
        android:id="@+id/glComponent"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_32dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="@+id/cvProfile"
        app:layout_constraintStart_toStartOf="@+id/cvProfile"
        app:layout_constraintTop_toBottomOf="@+id/cvProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnRating"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/ivRating"
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                android:src="@drawable/ic_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/text_rating"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivRating" />

            <TextView
                android:id="@+id/tvRatingDetail"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/size_2dp"
                android:text="@string/text_rating_detail"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_10sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRating" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnSupport"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/ivSupport"
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                android:src="@drawable/ic_support"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/text_support"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivSupport" />

            <TextView
                android:id="@+id/tvSupportDetail"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/size_2dp"
                android:text="@string/text_support_detail"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_10sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSupport" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnHistory"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/ivHistory"
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                android:src="@drawable/ic_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/text_history"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivHistory" />

            <TextView
                android:id="@+id/tvHistoryDetail"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/size_2dp"
                android:text="@string/text_history_detail"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_10sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHistory" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnMoney"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/size_24dp">

            <ImageView
                android:id="@+id/ivMoneyWord"
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                android:src="@drawable/ic_money"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMoneyWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/text_money_word"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivMoneyWord" />

            <TextView
                android:id="@+id/tvMoneyDetail"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/size_2dp"
                android:text="@string/text_money_word_detail"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_10sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMoneyWord" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnPayment"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/size_24dp">

            <ImageView
                android:id="@+id/ivPay"
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                android:src="@drawable/ic_pay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/text_pay"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPay" />

            <TextView
                android:id="@+id/tvPayDetail"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/size_2dp"
                android:text="@string/text_pay_detail"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_10sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPay" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>